# gmail-reader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env  sample_terminal_execution.txt
gmail_reader/: main.py
gmail_reader/database/: models.py
gmail_reader/gmail_service/: auth.py  mail.py
gmail_reader/rules/: rules.json  rules1.json
